Fix to spacing issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,6 +20,7 @@ body {
     background-color: rgb(93, 152, 58);
     text-align: center;
     font-size: 40px;
+    color: white;
 }
 
 
@@ -35,6 +36,12 @@ h2 {
     color: cyan;
     text-align: center;
 }
+h6 {
+    margin: 0;
+    color: white;
+    text-align: center;
+
+}
 
 p {
     padding-left: 20px;
@@ -44,6 +51,13 @@ p {
     text-align: center;
 
 }
+
+a {
+    margin: 10;
+    padding: 0;
+    font-size: 20px;
+    
+  }
 
 .first_paragraph {
     color: pink;
